# gold-grizzly

./: .gitignore  .gitmodules  .mcp.json  CLAUDE.md  README.md  continuation.md  event-publisher.py  eventuali-dashboard  eventuali-dashboard-WORKFLOW.md  git-status.txt  listing.txt  project-tasks.md  run-listener.sh  run-orchestrator.sh  start-eventuali-mcp.sh  tech-debt.md  test-event-publisher.py  test1.txt  timestamp.txt  uuid-bug-report.txt  workflow-demo.txt  workflow-summary.txt
.apps/: README.md  start-dev.sh
.apps/api/: .gitignore  CLAUDE.md  debug_test.py  main.py  pyproject.toml  startup.sh  test_deserialization.py  test_event_fix.py  test_event_retrieval.py  test_registration.py
.apps/api/.lol-agent/: lol-20250813-nextjs-darkreader-hydration-disaster.json  lol-20250813-startup-script-disaster.json
.apps/api/dependencies/: database.py
.apps/api/models/: events.py
.apps/api/routes/: events.py
.apps/api/tests/: test_events.py
.apps/listener/: CLAUDE.md  event-orchestrator.py  main.py  main_original.py  pyproject.toml
.apps/listener/core/: api_client.py  orchestrator.py  processor.py
.apps/listener/dependencies/: config.py
.apps/listener/handlers/: pool.py  registry.py
.apps/listener/models/: events.py  priorities.py  work_items.py
.apps/listener/services/: batcher.py  deduplicator.py
.apps/listener/tests/: test_orchestrator.py  test_processor.py  test_work_items.py
.apps/mcp/: CLAUDE.md  README.md  client.py  main.py  models.py  pyproject.toml  test_event_naming.py  test_integration.py  test_mcp_protocol.py
.claude/: __settings.local.json  settings.json
.events/: 2025-08-12t223230780-lolrecorder-momenttriggered-3de46576.json  2025-08-12t223237044-lolrecorder-contextgathered-d72e375e.json  2025-08-12t223243839-lolrecorder-foldercreated-c19fb459.json  2025-08-12t223306965-lolrecorder-momentrecorded-0260c83b.json  2025-08-12t223311858-lolrecorder-preservationcomplete-06ea7cf1.json  2025-08-12t223903969-lolrecorder-momenttriggered-5cf47737.json  2025-08-12t223908128-lolrecorder-contextgathered-29e37fac.json  2025-08-12t223915514-lolrecorder-foldercreated-8a05a46f.json  2025-08-12t223939581-lolrecorder-momentrecorded-9e1bc032.json  (+6 more)
(+197 files in other folders)
