[project]
name = "mcp-eventuali"
version = "0.1.0"
description = "MCP server for eventuali event system integration"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.2.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "pydocstyle>=6.3.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.scripts]
mcp-eventuali = "main:main"
